add activation akun
